--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="mb-3 col-md">
                 <label for="" class="text-light form-label">Contraseña</label>
-                <input type="password" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                <input type="password" class="form-control" name="pwd" id="pwd" aria-describedby="helpId" placeholder="">
             </div>
             <div class="col-1 mt-4">
                 <a name="" id="" class="btn btn-dark border-danger" href="#" role="button">Ingresar</a>
@@ -107,6 +107,7 @@
 
 
     <!-- Inner js -->
+    <script src="./js/script.js"></script>
 
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
