Implementación del código de Atributos para generar las Habilidades del mismo modo, se desvincula la creación de la hoja del objeto vampiro, ya que es la hoja la que genera el vampiro, no al revés

--- a/index.html
+++ b/index.html
@@ -122,34 +122,19 @@
                 <div class="col-4 text-center fw-bold">Mentales</div>
               </div>
               <!-- Constructor de los atributos -->
-              <div id="mainAttr">
-                <!-- <div class="col-4">
-                    Fuerza 
-                    <div class="d-inline">(_________)</div>
-                    <input class="stat" type="checkbox" id="str1" name="str_dot" value="1" checked onchange="levelSelect('str_dot',0)">
-                    <input class="stat" type="checkbox" id="str2" name="str_dot" value="2" onchange="levelSelect('str_dot',1)">
-                    <input class="stat" type="checkbox" id="str3" name="str_dot" value="3" onchange="levelSelect('str_dot',2)">
-                    <input class="stat" type="checkbox" id="str4" name="str_dot" value="4" onchange="levelSelect('str_dot',3)">
-                    <input class="stat" type="checkbox" id="str5" name="str_dot" value="5" onchange="levelSelect('str_dot',4)">
-                    <input class="stat" type="checkbox" id="str6" name="str_dot" value="6" onchange="levelSelect('str_dot',5)">
-                    <input class="stat" type="checkbox" id="str7" name="str_dot" value="7" onchange="levelSelect('str_dot',6)">
-                    <input class="stat" type="checkbox" id="str8" name="str_dot" value="8" onchange="levelSelect('str_dot',7)">
-                    <input class="stat" type="checkbox" id="str9" name="str_dot" value="9" onchange="levelSelect('str_dot',8)">
-                    <input class="stat" type="checkbox" id="str10" name="str_dot" value="10" onchange="levelSelect('str_dot',9)"> 
-                </div>                 
-                <div class="col-4 text-center">Carisma</div>
-                <div class="col-4 text-center">Percepción</div>
-              </div>
+              <div id="mainAttr"></div>
+                
+              <hr>
+
+              <textfield class="h3 text-center">Habilidades</textfield>
               <div class="row justify-content-center align-items-center g-2">
-                <div class="col-4 text-center">Destreza</div>                
-                <div class="col-4 text-center">Manipulación</div>
-                <div class="col-4 text-center">Inteligencia</div>
+                <div class="col-4 text-center fw-bold">Talentos</div>                
+                <div class="col-4 text-center fw-bold">Técnicas</div>
+                <div class="col-4 text-center fw-bold">Conocimientos</div>
               </div>
-              <div class="row justify-content-center align-items-center g-2">
-                <div class="col-4 text-center">Resistencia</div>                
-                <div class="col-4 text-center">Apariencia</div>
-                <div class="col-4 text-center">Astucia</div>
-              </div>-->
+              <!-- Constructor de los habilidades -->
+              <div id="mainHabs"></div>
+
             </div>
           </div>
         </main> <!--Fin del main-->
@@ -200,3 +185,43 @@
 
 <!-- font-family: 'Montserrat', sans-serif; -->
 
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- CÓDIGO PARA CREAR ATRIBUTOS
+  <div class="col-4">
+                    Fuerza 
+                    <div class="d-inline">(_________)</div>
+                    <input class="stat" type="checkbox" id="str1" name="str_dot" value="1" checked onchange="levelSelect('str_dot',0)">
+                    <input class="stat" type="checkbox" id="str2" name="str_dot" value="2" onchange="levelSelect('str_dot',1)">
+                    <input class="stat" type="checkbox" id="str3" name="str_dot" value="3" onchange="levelSelect('str_dot',2)">
+                    <input class="stat" type="checkbox" id="str4" name="str_dot" value="4" onchange="levelSelect('str_dot',3)">
+                    <input class="stat" type="checkbox" id="str5" name="str_dot" value="5" onchange="levelSelect('str_dot',4)">
+                    <input class="stat" type="checkbox" id="str6" name="str_dot" value="6" onchange="levelSelect('str_dot',5)">
+                    <input class="stat" type="checkbox" id="str7" name="str_dot" value="7" onchange="levelSelect('str_dot',6)">
+                    <input class="stat" type="checkbox" id="str8" name="str_dot" value="8" onchange="levelSelect('str_dot',7)">
+                    <input class="stat" type="checkbox" id="str9" name="str_dot" value="9" onchange="levelSelect('str_dot',8)">
+                    <input class="stat" type="checkbox" id="str10" name="str_dot" value="10" onchange="levelSelect('str_dot',9)"> 
+                </div>                 
+                <div class="col-4 text-center">Carisma</div>
+                <div class="col-4 text-center">Percepción</div>
+              </div>
+              <div class="row justify-content-center align-items-center g-2">
+                <div class="col-4 text-center">Destreza</div>                
+                <div class="col-4 text-center">Manipulación</div>
+                <div class="col-4 text-center">Inteligencia</div>
+              </div>
+              <div class="row justify-content-center align-items-center g-2">
+                <div class="col-4 text-center">Resistencia</div>                
+                <div class="col-4 text-center">Apariencia</div>
+                <div class="col-4 text-center">Astucia</div>
+              </div>-->
