--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class="m-3 bg-dark fs-6">
+<body class="m-3 bg-dark">
   <header>
     <div class="row justify-content-center align-items-center g-2">
       <!--  -->
@@ -100,6 +100,11 @@
             <!-- Constructor de los habilidades -->
             <div id="mainHabs"></div>
 
+            <hr>
+
+            <!-- Constructor de la parte baja de la hoja -->
+            <div id="mainAdv"></div>
+
           </div>
         </div>
       </main> <!--Fin del main-->
@@ -144,16 +149,11 @@
 
 <!-- font-family: 'Montserrat', sans-serif; -->
 
-
-
-
-
-
-
-
-
-
-
+<div class="row justify-content-center align-items-center g-2 bg-light">
+  <div class="col form-control">Column</div>
+  <div class="col">Column</div>
+  <div class="col">Column</div>
+</div>
 
 <!-- CÓDIGO PARA CREAR ATRIBUTOS
   <div class="col-4">
