--- a/index.html
+++ b/index.html
@@ -102,8 +102,13 @@
 
             <hr>
 
-            <!-- Constructor de la parte baja de la hoja -->
+            <!-- Constructor de la sección: Ventajas 1 -->
             <div id="mainAdv"></div>
+
+            <hr>
+
+            <!-- Constructor de la sección: Ventajas 2 -->
+            <div id="mainAdv2"></div>
 
           </div>
         </div>
@@ -155,31 +160,3 @@
   <div class="col">Column</div>
 </div>
 
-<!-- CÓDIGO PARA CREAR ATRIBUTOS
-  <div class="col-4">
-                    Fuerza 
-                    <div class="d-inline">(_________)</div>
-                    <input class="stat" type="checkbox" id="str1" name="str_dot" value="1" checked onchange="levelSelect('str_dot',0)">
-                    <input class="stat" type="checkbox" id="str2" name="str_dot" value="2" onchange="levelSelect('str_dot',1)">
-                    <input class="stat" type="checkbox" id="str3" name="str_dot" value="3" onchange="levelSelect('str_dot',2)">
-                    <input class="stat" type="checkbox" id="str4" name="str_dot" value="4" onchange="levelSelect('str_dot',3)">
-                    <input class="stat" type="checkbox" id="str5" name="str_dot" value="5" onchange="levelSelect('str_dot',4)">
-                    <input class="stat" type="checkbox" id="str6" name="str_dot" value="6" onchange="levelSelect('str_dot',5)">
-                    <input class="stat" type="checkbox" id="str7" name="str_dot" value="7" onchange="levelSelect('str_dot',6)">
-                    <input class="stat" type="checkbox" id="str8" name="str_dot" value="8" onchange="levelSelect('str_dot',7)">
-                    <input class="stat" type="checkbox" id="str9" name="str_dot" value="9" onchange="levelSelect('str_dot',8)">
-                    <input class="stat" type="checkbox" id="str10" name="str_dot" value="10" onchange="levelSelect('str_dot',9)"> 
-                </div>                 
-                <div class="col-4 text-center">Carisma</div>
-                <div class="col-4 text-center">Percepción</div>
-              </div>
-              <div class="row justify-content-center align-items-center g-2">
-                <div class="col-4 text-center">Destreza</div>                
-                <div class="col-4 text-center">Manipulación</div>
-                <div class="col-4 text-center">Inteligencia</div>
-              </div>
-              <div class="row justify-content-center align-items-center g-2">
-                <div class="col-4 text-center">Resistencia</div>                
-                <div class="col-4 text-center">Apariencia</div>
-                <div class="col-4 text-center">Astucia</div>
-              </div>-->
