--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <label for="" class="text-light form-label">Dirección de Foundry</label>
         <input type="text" class="form-control form-control-sm" name="" id="" aria-describedby="helpId"
           disabled="true" />
-        <small id="helpId" class="form-text text-muted">Ingrese o copie aquí la dirección de Foundry</small>
+        <small class="form-text text-muted">Ingrese o copie aquí la dirección de Foundry</small>
       </div>
 
       <div class="col-1 mt-4">
@@ -152,11 +152,5 @@
 
 </html>
 
-<!-- font-family: 'Montserrat', sans-serif; -->
 
-<div class="row justify-content-center align-items-center g-2 bg-light">
-  <div class="col form-control">Column</div>
-  <div class="col">Column</div>
-  <div class="col">Column</div>
-</div>
 
